--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,26 @@
-# Chrome Extension specific
-*.crx
-*.pem
-*.zip
-
-# OS specific files
-.DS_Store
-Thumbs.db
-desktop.ini
-
-# Editor directories and files
-.idea/
-.vscode/
-*.swp
-*.swo
-*~
-
-# Node.js (if you add dependencies later)
+# Dependencies
 node_modules/
-npm-debug.log
-yarn-debug.log
-yarn-error.log
-package-lock.json
-yarn.lock
 
-# Build directories
-dist/
-build/
+# Test artifacts
+test-results/
+playwright-report/
+
+# Screenshots and images (exclude large files)
+Screenshot*.png
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDE files
+.vscode/
+.idea/
+
+# Temporary files
+*.tmp
+*.temp
